overflow correction

--- a/src/index.sass
+++ b/src/index.sass
@@ -27,5 +27,8 @@ body
   background-repeat: no-repeat
   background-position-x: center
 
+  #root
+    overflow: hidden
+
 code
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace
