--- a/src/pages/about/AboutMe.sass
+++ b/src/pages/about/AboutMe.sass
@@ -1,7 +1,8 @@
 @use '../../../sass' as ext
 
 .aboutMe
-    height:  calc(100dvh - 30px)
+    height:  calc(100dvh - 10px)
+    overflow: auto
 
     img
         width: 20rem
