--- a/src/pages/home/Home.sass
+++ b/src/pages/home/Home.sass
@@ -4,6 +4,7 @@
     height: calc(100dvh - 30px)
     max-width: 2000px
     margin: auto
+    overflow: auto
 
     h1
         font-size: 2.5rem
